--- a/notebooks/linearchain.ipynb
+++ b/notebooks/linearchain.ipynb
@@ -22,7 +22,6 @@
     "import numpy\n",
     "import pynegf\n",
     "import scipy\n",
-    "#%matplotlib notebook  #Uncomment for inline plots.\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import sparse"
    ]
@@ -189,10 +188,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"m1aaa63c16c\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"mdcc1fd1a29\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"46.335852\" xlink:href=\"#m1aaa63c16c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"46.335852\" xlink:href=\"#mdcc1fd1a29\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -246,7 +245,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"100.444943\" xlink:href=\"#m1aaa63c16c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"100.444943\" xlink:href=\"#mdcc1fd1a29\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -286,7 +285,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"154.554034\" xlink:href=\"#m1aaa63c16c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"154.554034\" xlink:href=\"#mdcc1fd1a29\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -315,7 +314,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"208.663125\" xlink:href=\"#m1aaa63c16c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"208.663125\" xlink:href=\"#mdcc1fd1a29\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -351,7 +350,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"262.772216\" xlink:href=\"#m1aaa63c16c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"262.772216\" xlink:href=\"#mdcc1fd1a29\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -364,7 +363,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"316.881307\" xlink:href=\"#m1aaa63c16c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"316.881307\" xlink:href=\"#mdcc1fd1a29\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -377,7 +376,7 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"370.990398\" xlink:href=\"#m1aaa63c16c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"370.990398\" xlink:href=\"#mdcc1fd1a29\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -394,10 +393,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"mf726aefaba\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"me7e2453371\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#mf726aefaba\" y=\"261.216\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#me7e2453371\" y=\"261.216\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -420,7 +419,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#mf726aefaba\" y=\"212.832\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#me7e2453371\" y=\"212.832\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -435,7 +434,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#mf726aefaba\" y=\"164.448\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#me7e2453371\" y=\"164.448\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -469,7 +468,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#mf726aefaba\" y=\"116.064\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#me7e2453371\" y=\"116.064\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -516,7 +515,7 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#mf726aefaba\" y=\"67.68\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#me7e2453371\" y=\"67.68\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -572,7 +571,7 @@
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#mf726aefaba\" y=\"19.296\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#me7e2453371\" y=\"19.296\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -586,7 +585,7 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_14\">\n",
-       "    <path clip-path=\"url(#p2ea7e239df)\" d=\"M 46.335852 261.216 \n",
+       "    <path clip-path=\"url(#p1de9d75d40)\" d=\"M 46.335852 261.216 \n",
        "L 99.903852 261.216 \n",
        "L 100.444943 181.33789 \n",
        "L 100.986034 19.301595 \n",
@@ -621,7 +620,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p2ea7e239df\">\n",
+       "  <clipPath id=\"p1de9d75d40\">\n",
        "   <rect height=\"266.112\" width=\"357.12\" x=\"30.103125\" y=\"7.2\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -691,10 +690,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"md42ec7dbc4\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"mc527d42f3e\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.520227\" xlink:href=\"#md42ec7dbc4\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.520227\" xlink:href=\"#mc527d42f3e\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -748,7 +747,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"103.629318\" xlink:href=\"#md42ec7dbc4\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"103.629318\" xlink:href=\"#mc527d42f3e\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -788,7 +787,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"157.738409\" xlink:href=\"#md42ec7dbc4\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"157.738409\" xlink:href=\"#mc527d42f3e\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -817,7 +816,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"211.8475\" xlink:href=\"#md42ec7dbc4\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"211.8475\" xlink:href=\"#mc527d42f3e\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -853,7 +852,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"265.956591\" xlink:href=\"#md42ec7dbc4\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"265.956591\" xlink:href=\"#mc527d42f3e\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -866,7 +865,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"320.065682\" xlink:href=\"#md42ec7dbc4\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"320.065682\" xlink:href=\"#mc527d42f3e\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -879,7 +878,7 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"374.174773\" xlink:href=\"#md42ec7dbc4\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"374.174773\" xlink:href=\"#mc527d42f3e\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -896,10 +895,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"mf8eccefa8c\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m0f12db2fa9\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"261.216001\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"261.216001\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -912,7 +911,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"226.083971\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"226.083971\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -927,7 +926,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"190.951941\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"190.951941\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -942,7 +941,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"155.819911\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"155.819911\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -957,7 +956,7 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"120.687881\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"120.687881\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -991,7 +990,7 @@
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"85.555851\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"85.555851\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -1032,7 +1031,7 @@
        "    <g id=\"ytick_7\">\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"50.423821\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"50.423821\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -1079,7 +1078,7 @@
        "    <g id=\"ytick_8\">\n",
        "     <g id=\"line2d_15\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#mf8eccefa8c\" y=\"15.291792\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"33.2875\" xlink:href=\"#m0f12db2fa9\" y=\"15.291792\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_15\">\n",
@@ -1104,7 +1103,7 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_16\">\n",
-       "    <path clip-path=\"url(#p7b7424794c)\" d=\"M 49.520227 261.216 \n",
+       "    <path clip-path=\"url(#pdff745c1fb)\" d=\"M 49.520227 261.216 \n",
        "L 103.088227 261.202092 \n",
        "L 103.629318 19.296 \n",
        "L 104.170409 227.623531 \n",
@@ -1177,7 +1176,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p7b7424794c\">\n",
+       "  <clipPath id=\"pdff745c1fb\">\n",
        "   <rect height=\"266.112\" width=\"357.12\" x=\"33.2875\" y=\"7.2\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
