--- a/notebooks/linearchain_dephasing.ipynb
+++ b/notebooks/linearchain_dephasing.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "Current in a linear chain with dephasing model\n",
     "===============================================\n",
@@ -21,7 +19,6 @@
     "import numpy\n",
     "import pynegf\n",
     "import scipy\n",
-    "#%matplotlib notebook  #Uncomment for inline plots.\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import sparse"
    ]
@@ -77,9 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "When interactions are present, as in the case of dephasing, instead of the transmission we calculate energy resolved currents using the Meir-Wingreen formula. to visualize the current in a broad energy range, we set a very large chemical potential difference in the two electrodes.  "
    ]
@@ -102,9 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "The dephasing model is activated with the method `set_elph_dephasing`"
    ]
@@ -125,9 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "The energy resolved current should resemble the transmission obtained in the balistic case, but the scattering introduced by the dephasing model will reduce the current below 1 (expressed in units of ballistic current). The effect is larger where the density of state is larger, i.e. near the band edges. "
    ]
@@ -174,10 +165,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"m24cb1bb08c\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m0e4d948158\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"78.801307\" xlink:href=\"#m24cb1bb08c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"78.801307\" xlink:href=\"#m0e4d948158\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -223,7 +214,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"143.732216\" xlink:href=\"#m24cb1bb08c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"143.732216\" xlink:href=\"#m0e4d948158\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -252,7 +243,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"208.663125\" xlink:href=\"#m24cb1bb08c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"208.663125\" xlink:href=\"#m0e4d948158\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -288,7 +279,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"273.594034\" xlink:href=\"#m24cb1bb08c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"273.594034\" xlink:href=\"#m0e4d948158\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -301,7 +292,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"338.524943\" xlink:href=\"#m24cb1bb08c\" y=\"273.312\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"338.524943\" xlink:href=\"#m0e4d948158\" y=\"273.312\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -318,10 +309,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"m07c162140a\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m79d4c108b2\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m07c162140a\" y=\"261.216\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m79d4c108b2\" y=\"261.216\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -344,7 +335,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m07c162140a\" y=\"210.4128\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m79d4c108b2\" y=\"210.4128\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -359,7 +350,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m07c162140a\" y=\"159.6096\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m79d4c108b2\" y=\"159.6096\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -393,7 +384,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m07c162140a\" y=\"108.8064\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m79d4c108b2\" y=\"108.8064\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -440,7 +431,7 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m07c162140a\" y=\"58.0032\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"30.103125\" xlink:href=\"#m79d4c108b2\" y=\"58.0032\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -495,7 +486,7 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_11\">\n",
-       "    <path clip-path=\"url(#p01623936b3)\" d=\"M 46.335852 261.216 \n",
+       "    <path clip-path=\"url(#p3697943116)\" d=\"M 46.335852 261.216 \n",
        "L 77.178034 261.216 \n",
        "L 78.801307 245.999312 \n",
        "L 80.42458 173.169985 \n",
@@ -591,7 +582,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p01623936b3\">\n",
+       "  <clipPath id=\"p3697943116\">\n",
        "   <rect height=\"266.112\" width=\"357.12\" x=\"30.103125\" y=\"7.2\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
